Full broject with testing